objects/Catalogo_Billing__c.object
<CustomObject>
    <fields>
        <fullName>Billing_interval_type__c</fullName>
        <label>Billing interval type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_type__c</fullName>
        <label>Billing type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore__c</fullName>
        <label>Codice Operatore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Testers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PricePlan_ID__c</fullName>
        <label>PricePlan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePlan_Name__c</fullName>
        <label>PricePlan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Package__c</fullName>
        <label>Product Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Text__c</fullName>
        <label>Sales Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <formula>&apos;OF&apos; + &apos;-&apos;+  UPPER(LEFT(EOF_Comune__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler</label>
        <type>Text</type>
    </fields>
    <label>Catalogo Billing</label>
    <nameField>
        <label>Catalogo Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogo Billing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>